# oak

./: .devcontainer.json  .gitignore  Cargo.toml  Dockerfile  RELEASE_COMMIT  justfile  reproducibility_index
.github/workflows/: proveance3.yaml  provenance.yaml  reproducibility.yaml  reusable_provenance.yaml
demo_oc3_2024/: build_and_measure
doc/: search-index.js
doc/oak_baremetal_launcher/: struct.Args.html
doc/oak_dice/evidence/: constant.CERTIFICATE_SIZE.html  constant.DICE_DATA_CMDLINE_PARAM.html  constant.P256_PRIVATE_KEY_SIZE.html  constant.PRIVATE_KEY_SIZE.html  constant.PUBLIC_KEY_SIZE.html  constant.REPORT_SIZE.html  constant.STAGE0_MAGIC.html  enum.TeePlatform.html  index.html  struct.ApplicationKeys.html  struct.ApplicationPrivateKeys.html  struct.CertificateAuthority.html  struct.Evidence.html  struct.LayerEvidence.html  struct.RestrictedKernelDiceData.html  struct.RootLayerEvidence.html  struct.Stage0DiceData.html
doc/oak_dice/utils/: fn.cbor_encoded_bytes_to_vec.html  index.html
doc/oak_functions_client/rekor/: struct.LogEntryVerification.html
doc/oak_functions_containers_launcher/: struct.UntrustedApp.html
doc/oak_functions_loader/logger/: struct.Logger.html
doc/oak_remote_attestation_sessions/: enum.SessionState.html
doc/trusted_shuffler/: struct.TrustedShuffler.html
docs/: remote-attestation.md
experimental/oak_baremetal_channel/: build.rs
experimental/oak_baremetal_launcher/: Cargo.toml  build.rs
experimental/oak_baremetal_loader/: Cargo.toml
experimental/oak_baremetal_runtime/: schema.proto
experimental/uefi/: Cargo.toml
experimental/web_client/: Cargo.toml  build.rs  index.html
experimental/web_client/src/: grpc_web.rs  lib.rs  utils.rs
grpc_attestation/: Cargo.toml
grpc_attestation/src/: server.rs  streaming_client.rs
grpc_unary_attestation/: Cargo.toml  build.rs
grpc_unary_attestation/proto/: BUILD
grpc_unary_attestation/src/: client.rs  lib.rs  server.rs
oak_attestation_explain/: Cargo.toml
oak_attestation_explain/src/: 1.json  lib.rs
oak_attestation_explain/tests/: explain_test.rs
oak_attestation_explain_cli/: Cargo.toml
oak_attestation_explain_cli/src/: 1.json  main.rs
oak_attestation_verification/src/: verifier.rs
oak_attestation_verification/tests/: verifier_tests.rs
oak_containers_echo_container/: Dockerfile  build_container_bundle  config.json
oak_containers_echo_trusted_app/: Cargo.toml  build.rs
oak_containers_echo_trusted_app/proto/: interface.proto
oak_containers_echo_trusted_app/src/: app_service.rs
oak_containers_echo_untrusted_app/: Cargo.toml  build.rs
oak_containers_echo_untrusted_app/src/: app_client.rs  main.rs
oak_containers_orchestrator/src/: container_runtime.rs
oak_containers_system_image/: Dockerfile  oak-orchestrator.service
oak_dice/src/: evidence.rs
oak_functions/loader/: Cargo.toml  build.rs
oak_functions/proto/: invocation.proto
oak_idl/src/: lib.rs
oak_idl_gen_services/src/: lib.rs
oak_idl_tests/: Cargo.toml  build.rs  test_schema_services.rs.txt  test_schema_services_async_clients.rs.txt  test_schema_services_clients.rs.txt
oak_idl_tests/tests/: generate.rs  test_schema.rs
oak_proto_idl/: Cargo.toml
oak_proto_idl_gen_services/: Cargo.toml  build.rs
oak_proto_idl_gen_structs/: Cargo.toml
oak_proto_idl_tests/: Cargo.toml  build.rs  test_schema_services_clients.rs.txt
oak_proto_rust/: BUILD  Cargo.toml  build.rs
oak_proto_rust/src/: lib.rs
oak_remote_attestation/src/: dice.rs
oak_restricted_kernel/: Cargo.toml
oak_restricted_kernel/src/: dice_attestation.rs  lib.rs  memory.rs  payload.rs
oak_restricted_kernel_bin/: Cargo.toml
oak_restricted_kernel_interface/src/: syscall.rs  syscalls.rs
oak_restricted_kernel_launcher/: README.md
oak_restricted_kernel_sdk/src/: dice.rs
oak_runtime/: Cargo.toml
oak_utils/: Cargo.toml
remote_attestation/rust/: Cargo.toml
remote_attestation_sessions/: Cargo.toml
remote_attestation_sessions/src/: client.rs  lib.rs
remote_attestation_sessions_client/: Cargo.toml
remote_attestation_sessions_client/src/: lib.rs
scripts/: build_provenance  common  docker_entrypoint  docker_run
wasm_pack/: Cargo.toml  LICENSE_MIT  index.html
wasm_pack/src/: lib.rs
(+69 files in other folders)
