[package]
name = "oak_remote_attestation_sessions_client"
version = "0.1.0"
authors = ["Juliette Pretot <julsh@google.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["oak_remote_attestation/ring-crypto"]
js = [
  "oak_remote_attestation/rust-crypto",
  "oak_remote_attestation/js",
  "oak_remote_attestation_sessions/js",
  "getrandom/js"
]

[dependencies]
oak_remote_attestation = { path = "../remote_attestation/rust/", default-features = false }
oak_remote_attestation_sessions = { path = "../remote_attestation_sessions/", default-features = false }
anyhow = "*"
rand = "*"
getrandom = { version = "*", optional = true }
async-trait = "*"
