[package]
name = "oak_functions_web_client"
version = "0.1.0"
authors = ["Juliette Pretot <hi@juliette.sh>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "rust-crypto"]
rust-crypto = [
  "oak_remote_attestation/rust-crypto",
  "oak_remote_attestation/js"
]

[dependencies]
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
console_error_panic_hook = { version = "*", optional = true }
anyhow = { version = "*", default-features = false }
oak_functions_abi = { path = "../../oak_functions/abi" }
oak_remote_attestation = { path = "../../remote_attestation/rust/", default-features = false }
oak_remote_attestation_sessions = { path = "../../remote_attestation_sessions/", default-features = false }
tonic = { version = "*", default-features = false, features = [
  "codegen",
  "prost"
] }
rand = "*"
prost = { version = "*", default-features = false, features = ["prost-derive"] }
bytes = "*"
reqwest = "*"
web-sys = { version = "*", features = ["console"] }
js-sys = "*"

[dev-dependencies]
wasm-bindgen-test = "*"

[build-dependencies]
prost-build = "*"

[profile.release]
opt-level = "s"
