[package]
name = "oak_functions_web_client"
version = "0.1.0"
authors = ["Juliette Pretot <hi@juliette.sh>"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["js"]
js = [
  "oak_remote_attestation_sessions/js",
  "oak_remote_attestation_sessions_client/js"
]

[dependencies]
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
console_error_panic_hook = { version = "*", optional = true }
anyhow = { version = "*", default-features = false }
oak_functions_abi = { path = "../../oak_functions/abi" }
oak_remote_attestation_sessions = { path = "../../remote_attestation_sessions/", default-features = false }
oak_remote_attestation_sessions_client = { path = "../../remote_attestation_sessions_client/", default-features = false }
prost = { version = "*", default-features = false, features = ["prost-derive"] }
bytes = "*"
reqwest = "*"
web-sys = { version = "*", features = ["console"] }
js-sys = "*"
async-trait = "*"

[build-dependencies]
prost-build = "*"
